增加指定数据类型使严谨

--- a/强化学习笔记/13_DDPG.ipynb
+++ b/强化学习笔记/13_DDPG.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,18 +126,12 @@
     "            param_target.data.copy_(param_target.data * (1.0 - self.tau) + param.data * self.tau)\n",
     "\n",
     "    def update(self, transition_dict):\n",
-    "        states = torch.tensor(\n",
-    "            transition_dict['states'], dtype=torch.float).to(self.device)\n",
-    "        actions = torch.tensor(\n",
-    "            transition_dict['actions'], dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        rewards = torch.tensor(\n",
-    "            transition_dict['rewards'], dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        next_states = torch.tensor(\n",
-    "            transition_dict['next_states'], dtype=torch.float).to(self.device)\n",
-    "        dones = torch.tensor(\n",
-    "            transition_dict['dones'], dtype=torch.int).view(-1, 1).to(self.device)\n",
-    "        truncated = torch.tensor(\n",
-    "            transition_dict['truncated'], dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        states = torch.tensor(transition_dict['states'], dtype=torch.float).to(self.device)\n",
+    "        actions = torch.tensor(transition_dict['actions'], dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        rewards = torch.tensor(transition_dict['rewards'], dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        next_states = torch.tensor(transition_dict['next_states'], dtype=torch.float).to(self.device)\n",
+    "        dones = torch.tensor(transition_dict['dones'], dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        truncated = torch.tensor(transition_dict['truncated'], dtype=torch.int).view(-1, 1).to(self.device)\n",
     "\n",
     "        # 评论员还是时序差分更新, 评论员现在叫Q网络, 但是和之前价值网络一样\n",
     "        # 不同点是需要输入状态和动作, 动作由演员选择, DQN里面的Q网络不需要输入动作\n",
@@ -181,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -193,9 +187,8 @@
     }
    ],
    "source": [
-    "\n",
     "# DDPG算法相关\n",
-    "PATH = 'checkpoints/DDPG_PDv1.pt'\n",
+    "PATH = 'checkpoints/debug/DDPG_PDv1.pt'\n",
     "actor_lr = 3e-4\n",
     "critic_lr = 3e-3\n",
     "total_episodes = 200\n",
@@ -231,6 +224,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-0.8882292 , -0.45940065,  0.9904026 ], dtype=float32), {})"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-0.8692501 , -0.4943726 ,  0.79585207], dtype=float32),\n",
+       " -7.1974368602823136,\n",
+       " False,\n",
+       " False,\n",
+       " {})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.step([1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -239,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,17 +325,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                            \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "return_list = rl_utils.train_off_policy_agent(env, agent, s_epoch, total_epochs, s_episode, total_episodes, replay_buffer, minimal_size, batch_size, return_list, PATH, 'DDPG')"
+    "return_list = rl_utils.train_off_policy_agent(env, agent, s_epoch, total_epochs, s_episode, total_episodes, replay_buffer, minimal_size, batch_size, return_list, PATH, 2)"
    ]
   },
   {
@@ -408,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
