--- a/强化学习笔记/19_多智能体.ipynb
+++ b/强化学习笔记/19_多智能体.ipynb
@@ -29,7 +29,9 @@
    "source": [
     "# ❗注意\n",
     "\n",
-    "未配置环境，本节代码无法运行"
+    "未配置环境，本节代码无法运行，[参考](https://hrl.boyuai.com/chapter/3/%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E8%BF%9B%E9%98%B6)，因执行安装环境指令导致conda损坏一次，因此不建议运行。\n",
+    "\n",
+    "本笔记对代码细节进行了额外标注便于理解思想。"
    ]
   },
   {
@@ -74,7 +76,7 @@
     "        np.random.choice(range(logits.shape[1]), size=logits.shape[0])\n",
     "    ]],\n",
     "                                       requires_grad=False).to(logits.device)\n",
-    "    # 通过epsilon-贪婪算法来选择用哪个动作\n",
+    "    # 通过epsilon-贪婪算法来选择用哪个动作，r是\n",
     "    return torch.stack([\n",
     "        argmax_acs[i] if r > eps else rand_acs[i]\n",
     "        for i, r in enumerate(torch.rand(logits.shape[0]))\n",
@@ -89,7 +91,7 @@
     "\n",
     "\n",
     "def gumbel_softmax_sample(logits, temperature):\n",
-    "    \"\"\" 从Gumbel-Softmax分布中采样\"\"\"\n",
+    "    \"\"\" 从Gumbel-Softmax分布中采样，加上从sample_gumbel生成的噪声\"\"\"\n",
     "    y = logits + sample_gumbel(logits.shape, tens_type=type(logits.data)).to(\n",
     "        logits.device)\n",
     "    return F.softmax(y / temperature, dim=1)\n",
@@ -99,9 +101,13 @@
     "    \"\"\"从Gumbel-Softmax分布中采样,并进行离散化\"\"\"\n",
     "    y = gumbel_softmax_sample(logits, temperature)\n",
     "    y_hard = onehot_from_logits(y)\n",
-    "    y = (y_hard.to(logits.device) - y).detach() + y\n",
+    "    y = (y_hard.to(logits.device) - y).detach() + y  # * 式（1）\n",
+    "    # * 减一个y再加一个y，仍然是onehot_y，也就是离散的action\n",
     "    # 返回一个y_hard的独热量,但是它的梯度是y,我们既能够得到一个与环境交互的离散动作,又可以\n",
     "    # 正确地反传梯度\n",
+    "    # * 我的理解是，对于最后return的y来说，是离散的动作（独热的），但是求梯度时，\n",
+    "    # * 在式（1）中，由于前面detach了，没有梯度，因此只对后一个y求梯度，\n",
+    "    # * 这个y是来自上一个函数gumbel_softmax_sample得到的y，这样就可以反向传播了\n",
     "    return y"
    ]
   },
@@ -132,27 +138,24 @@
     "\n",
     "\n",
     "class DDPG:\n",
-    "    ''' DDPG算法 '''\n",
+    "    ''' DDPG算法, 参数更新写在MADDPG中 '''\n",
     "    def __init__(self, state_dim, action_dim, critic_input_dim, hidden_dim,\n",
     "                 actor_lr, critic_lr, device):\n",
     "        self.actor = TwoLayerFC(state_dim, action_dim, hidden_dim).to(device)\n",
-    "        self.target_actor = TwoLayerFC(state_dim, action_dim,\n",
-    "                                       hidden_dim).to(device)\n",
+    "        self.target_actor = TwoLayerFC(state_dim, action_dim, hidden_dim).to(device)\n",
     "        self.critic = TwoLayerFC(critic_input_dim, 1, hidden_dim).to(device)\n",
-    "        self.target_critic = TwoLayerFC(critic_input_dim, 1,\n",
-    "                                        hidden_dim).to(device)\n",
+    "        self.target_critic = TwoLayerFC(critic_input_dim, 1, hidden_dim).to(device)\n",
     "        self.target_critic.load_state_dict(self.critic.state_dict())\n",
     "        self.target_actor.load_state_dict(self.actor.state_dict())\n",
-    "        self.actor_optimizer = torch.optim.Adam(self.actor.parameters(),\n",
-    "                                                lr=actor_lr)\n",
-    "        self.critic_optimizer = torch.optim.Adam(self.critic.parameters(),\n",
-    "                                                 lr=critic_lr)\n",
+    "        self.actor_optimizer = torch.optim.Adam(self.actor.parameters(), lr=actor_lr)\n",
+    "        self.critic_optimizer = torch.optim.Adam(self.critic.parameters(), lr=critic_lr)\n",
     "\n",
     "    def take_action(self, state, explore=False):\n",
     "        action = self.actor(state)\n",
-    "        if explore:\n",
+    "        if explore:  # *探索时，需要训练模型，gumbel_softmax可以反向传播\n",
     "            action = gumbel_softmax(action)\n",
-    "        else:\n",
+    "        else:  # * 应用时，不需要训练模型，onehot_from_logits直接把连续动作离散，\n",
+    "               # * 无法反向传播，但是返回的结果只比gumbel_softmax少一个噪声，差别不大\n",
     "            action = onehot_from_logits(action)\n",
     "        return action.detach().cpu().numpy()[0]\n",
     "\n",
@@ -172,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,8 +203,10 @@
     "    def take_action(self, states, explore):\n",
     "        states = [\n",
     "            torch.tensor([states[i]], dtype=torch.float, device=self.device)\n",
-    "            for i in env.agents\n",
+    "            for i in env.agents  # 未写环境导致的警告\n",
     "        ]\n",
+    "        \n",
+    "        #  注意：这里的agent.take_action是DDPG算法中的\n",
     "        return [\n",
     "            agent.take_action(state, explore)\n",
     "            for agent, state in zip(self.agents, states)\n",
@@ -315,51 +320,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Bowen\\AppData\\Local\\Temp\\ipykernel_15204\\3717953814.py:24: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\cb\\pytorch_1000000000000\\work\\torch\\csrc\\utils\\tensor_new.cpp:248.)\n",
-      "  torch.tensor([states[i]], dtype=torch.float, device=self.device)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "5\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for %: 'list' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\机器学习实战\\强化学习笔记\\19_多智能体.ipynb 单元格 15\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m actions \u001b[39m=\u001b[39m maddpg\u001b[39m.\u001b[39mtake_action(state, explore\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m actions \u001b[39m=\u001b[39m {\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     i: [j]\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m env\u001b[39m.\u001b[39magents\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m actions\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m }\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m next_state, reward, done, truncated, _ \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39;49mstep(actions)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m replay_buffer\u001b[39m.\u001b[39madd(state, actions, reward, next_state, done, truncated)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m state \u001b[39m=\u001b[39m next_state\n",
-      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\utils\\conversions.py:207\u001b[0m, in \u001b[0;36maec_to_parallel_wrapper.step\u001b[1;34m(self, actions)\u001b[0m\n\u001b[0;32m    203\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mAssertionError\u001b[39;00m(\n\u001b[0;32m    204\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mexpected agent \u001b[39m\u001b[39m{\u001b[39;00magent\u001b[39m}\u001b[39;00m\u001b[39m got agent \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39maec_env\u001b[39m.\u001b[39magent_selection\u001b[39m}\u001b[39;00m\u001b[39m, Parallel environment wrapper expects agents to step in a cycle.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    205\u001b[0m         )\n\u001b[0;32m    206\u001b[0m obs, rew, termination, truncation, info \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maec_env\u001b[39m.\u001b[39mlast()\n\u001b[1;32m--> 207\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49maec_env\u001b[39m.\u001b[39;49mstep(actions[agent])\n\u001b[0;32m    208\u001b[0m \u001b[39mfor\u001b[39;00m agent \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maec_env\u001b[39m.\u001b[39magents:\n\u001b[0;32m    209\u001b[0m     rewards[agent] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maec_env\u001b[39m.\u001b[39mrewards[agent]\n",
-      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\utils\\wrappers\\order_enforcing.py:91\u001b[0m, in \u001b[0;36mOrderEnforcingWrapper.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m     89\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     90\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_has_updated \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m---> 91\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mstep(action)\n",
-      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\utils\\wrappers\\base.py:116\u001b[0m, in \u001b[0;36mBaseWrapper.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m    115\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstep\u001b[39m(\u001b[39mself\u001b[39m, action: ActionType) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 116\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mstep(action)\n\u001b[0;32m    118\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39magent_selection \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39magent_selection\n\u001b[0;32m    119\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrewards \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39mrewards\n",
-      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\utils\\wrappers\\assert_out_of_bounds.py:26\u001b[0m, in \u001b[0;36mAssertOutOfBoundsWrapper.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39maction_space(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39magent_selection)\u001b[39m.\u001b[39mn)\n\u001b[0;32m     18\u001b[0m \u001b[39massert\u001b[39;00m (\n\u001b[0;32m     19\u001b[0m     action \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     20\u001b[0m     \u001b[39mand\u001b[39;00m (\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     24\u001b[0m ) \u001b[39mor\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39maction_space(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39magent_selection)\u001b[39m.\u001b[39mn \u001b[39m!=\u001b[39m \u001b[39mlen\u001b[39m(action)\n\u001b[0;32m     25\u001b[0m       ), \u001b[39m\"\u001b[39m\u001b[39maction is not in action space\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m---> 26\u001b[0m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mstep(action)\n",
-      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\utils\\wrappers\\base.py:116\u001b[0m, in \u001b[0;36mBaseWrapper.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m    115\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstep\u001b[39m(\u001b[39mself\u001b[39m, action: ActionType) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 116\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mstep(action)\n\u001b[0;32m    118\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39magent_selection \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39magent_selection\n\u001b[0;32m    119\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrewards \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39mrewards\n",
-      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\mpe\\_mpe_utils\\simple_env.py:251\u001b[0m, in \u001b[0;36mSimpleEnv.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m    248\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcurrent_actions[current_idx] \u001b[39m=\u001b[39m action\n\u001b[0;32m    250\u001b[0m \u001b[39mif\u001b[39;00m next_idx \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m--> 251\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_execute_world_step()\n\u001b[0;32m    252\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msteps \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m    253\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msteps \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmax_cycles:\n",
-      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\mpe\\_mpe_utils\\simple_env.py:174\u001b[0m, in \u001b[0;36mSimpleEnv._execute_world_step\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    172\u001b[0m         action \u001b[39m=\u001b[39m action[mdim:]\n\u001b[0;32m    173\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 174\u001b[0m         scenario_action\u001b[39m.\u001b[39mappend(action \u001b[39m%\u001b[39;49m mdim)\n\u001b[0;32m    175\u001b[0m         action \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m=\u001b[39m mdim\n\u001b[0;32m    176\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m agent\u001b[39m.\u001b[39msilent:\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for %: 'list' and 'int'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def evaluate(maddpg, n_episode=10, episode_length=25):\n",
     "    # 对学习的策略进行评估,此时不会进行探索\n",
@@ -381,12 +344,8 @@
     "    state, info = env.reset()\n",
     "    # ep_returns = np.zeros(len(env.agents))\n",
     "    for e_i in range(episode_length):\n",
+    "        # actions是一个矩阵，每一行表示一个智能体的动作集\n",
     "        actions = maddpg.take_action(state, explore=True)\n",
-    "        actions = {\n",
-    "            i: [j]\n",
-    "            for i in env.agents\n",
-    "            for j in actions\n",
-    "        }\n",
     "        next_state, reward, done, truncated, _ = env.step(actions)\n",
     "        replay_buffer.add(state, actions, reward, next_state, done, truncated)\n",
     "        state = next_state\n",
@@ -406,7 +365,7 @@
     "            sample = [stack_array(x) for x in sample]\n",
     "            for a_i in range(len(env.agents)):\n",
     "                maddpg.update(sample, a_i)\n",
-    "            maddpg.update_all_targets()\n",
+    "            maddpg.update_all_targets()  # 软更新来的\n",
     "    if (i_episode + 1) % 100 == 0:\n",
     "        ep_returns = evaluate(maddpg, n_episode=100)\n",
     "        return_list.append(ep_returns)\n",
