增加多智能体代码解释

--- a/强化学习笔记/19_多智能体.ipynb
+++ b/强化学习笔记/19_多智能体.ipynb
@@ -354,6 +354,7 @@
     "        if replay_buffer.size() >= minimal_size and total_step % update_interval == 0:\n",
     "            sample = replay_buffer.sample(batch_size)\n",
     "\n",
+    "            # 👇下面这个函数的操作比较难解释，提示：输入网络的维度是状态长度，相当于特征，具体过程看后面\n",
     "            def stack_array(x):\n",
     "                rearranged = [[sub_x[i] for sub_x in x]\n",
     "                              for i in range(len(x[0]))]\n",
@@ -382,11 +383,266 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 关于stack_array函数的解释"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stack_array(x):\n",
+    "    rearranged = [[sub_x[i] for sub_x in x]\n",
+    "                    for i in range(len(x[0]))]\n",
+    "    return [\n",
+    "        torch.FloatTensor(np.vstack(aa))\n",
+    "        for aa in rearranged\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 环境给出的状态形式，每行代表某一时刻三个智能体的观测，这里假设是随机抽了三个，即行数\n",
+    "x = [[np.array([1, 2]), np.array([3, 4]), np.array([3, 5])],\n",
+    "     [np.array([4, 2]), np.array([0, 7]), np.array([5, 5])],\n",
+    "     [np.array([1, 5]), np.array([4, 7]), np.array([6, 2])],]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[array([1, 2]), array([4, 2]), array([1, 5])],\n",
+       " [array([3, 4]), array([0, 7]), array([4, 7])],\n",
+       " [array([3, 5]), array([5, 5]), array([6, 2])]]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 第一步\n",
+    "[[sub_x[i] for sub_x in x] for i in range(len(x[0]))]\n",
+    "\n",
+    "# 其实就是转置，但是列表不能转置"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa = [[sub_x[i] for sub_x in x] for i in range(len(x[0]))][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([1, 2]), array([4, 2]), array([1, 5])]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [3],\n",
+       "       [5]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.vstack(aa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([[1., 2.],\n",
+       "         [4., 2.],\n",
+       "         [1., 5.]]),\n",
+       " tensor([[3., 4.],\n",
+       "         [0., 7.],\n",
+       "         [4., 7.]]),\n",
+       " tensor([[3., 5.],\n",
+       "         [5., 5.],\n",
+       "         [6., 2.]])]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stack_array(x)  # 把array拆了，倒数第二维变成torch.tensor\n",
+    "# 此时第一个输入的样本，即第一个tensor，就是该批次中，第一个智能体所碰到的全部当前状态\n",
+    "# 第二个tensor，就是第二个智能体碰到的全部当前状态\n",
+    "# 里面tensor部分就和单智能体一样了，参考后面的单智能体输出结果"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 单智能体的输出过程"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-0.9915461 , -0.12975487, -1.7433108 ],\n",
+       "        [-0.9959213 ,  0.09022571,  3.2651248 ],\n",
+       "        [-0.98676467, -0.1621588 , -1.6151077 ]], dtype=float32),\n",
+       " array([[-0.48415332],\n",
+       "        [-0.28630628],\n",
+       "        [ 0.59497711]]),\n",
+       " array([ -9.37310467, -10.37627635,  -9.13395216]),\n",
+       " array([[-0.99940634, -0.03445243, -1.91325   ],\n",
+       "        [-0.9972526 , -0.07407591,  3.289848  ],\n",
+       "        [-0.9967613 , -0.08041708, -1.6474802 ]], dtype=float32),\n",
+       " (False, False, False),\n",
+       " (False, False, False))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "replay_buffer.sample(3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b_s, b_a, b_r, b_ns, b_d, b_t = replay_buffer.sample(3)\n",
+    "transition_dict = {'states': b_s, 'actions': b_a, 'next_states': b_ns, \n",
+    "                    'rewards': b_r, 'dones': b_d, 'truncated': b_t}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.99729466,  0.07350754,  2.942201  ],\n",
+       "       [-0.9995337 , -0.03053527, -2.6963842 ],\n",
+       "       [-0.9931456 , -0.1168839 , -8.        ]], dtype=float32)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.99729466,  0.07350754,  2.942201  ],\n",
+       "       [-0.9995337 , -0.03053527, -2.6963842 ],\n",
+       "       [-0.9931456 , -0.1168839 , -8.        ]], dtype=float32)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "transition_dict['states']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.9973,  0.0735,  2.9422],\n",
+       "        [-0.9995, -0.0305, -2.6964],\n",
+       "        [-0.9931, -0.1169, -8.0000]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "torch.tensor(transition_dict['states'], dtype=torch.float)"
+   ]
   }
  ],
  "metadata": {
