--- a/强化学习笔记/13_DDPG.ipynb
+++ b/强化学习笔记/13_DDPG.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
    ],
    "source": [
     "# DDPG算法相关\n",
-    "PATH = 'checkpoints/debug/DDPG_PDv1.pt'\n",
+    "PATH = 'checkpoints/DDPG_PDv1.pt'\n",
     "actor_lr = 3e-4\n",
     "critic_lr = 3e-3\n",
     "total_episodes = 200\n",
@@ -225,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([-0.8882292 , -0.45940065,  0.9904026 ], dtype=float32), {})"
+       "(array([0.9715438 , 0.23685996, 0.753903  ], dtype=float32), {})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,20 +245,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([-0.8692501 , -0.4943726 ,  0.79585207], dtype=float32),\n",
-       " -7.1974368602823136,\n",
+       "(array([0.95732105, 0.28902668, 1.081548  ], dtype=float32),\n",
+       " -0.1150213541306821,\n",
        " False,\n",
        " False,\n",
        " {})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
