--- a/强化学习笔记/16_行为预测控制.ipynb
+++ b/强化学习笔记/16_行为预测控制.ipynb
@@ -394,7 +394,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PETS算法"
+    "# PETS算法\n",
+    "\n",
+    "带有轨迹采样的概率集成（probabilistic ensembles with trajectory sampling，PETS）"
    ]
   },
   {
