--- a/强化学习笔记/18_目标导向强化学习.ipynb
+++ b/强化学习笔记/18_目标导向强化学习.ipynb
@@ -242,7 +242,7 @@
     "            if use_her and np.random.uniform() <= her_ratio:\n",
     "                # 从step_state + 1, traj.length + 1中均匀取一个数, 作为新的目标的索引, 注意与环境内的真实目标区分\n",
     "                step_goal = np.random.randint(step_state + 1, traj.length + 1)\n",
-    "                # 使用HER算法的future方案, 在当前轨迹随机取一个点, 设置目标状态, 状态前两个值是坐标值\n",
+    "                # ↓使用HER算法的future方案, 在当前轨迹随机取一个点, 设置为目标状态, 状态前两个值是坐标值\n",
     "                goal = traj.states[step_goal][:2]\n",
     "                dis = np.sqrt(np.sum(np.square(next_state[:2] - goal)))  # 计算下一个状态位置和目标值的距离\n",
     "                reward = -1.0 if dis > dis_threshold else 0  # 如果下一状态离目标比较近, 不惩罚\n",
