--- a/强化学习笔记/10_Actor-Critic.ipynb
+++ b/强化学习笔记/10_Actor-Critic.ipynb
@@ -111,18 +111,12 @@
     "        return action.item()  # 取到的动作序号是tensor, 转成普通python数字\n",
     "\n",
     "    def update(self, transition_dict):\n",
-    "        states = torch.tensor(np.array(transition_dict['states']), \n",
-    "                              dtype=torch.float).to(self.device)\n",
-    "        actions = torch.tensor(np.array(transition_dict['actions']), \n",
-    "                               dtype=torch.int64).view(-1, 1).to(self.device)\n",
-    "        rewards = torch.tensor(np.array(transition_dict['rewards']), \n",
-    "                               dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        next_states = torch.tensor(np.array(transition_dict['next_states']), \n",
-    "                                   dtype=torch.float).to(self.device)\n",
-    "        dones = torch.tensor(np.array(transition_dict['dones']), \n",
-    "                             dtype=torch.int).view(-1, 1).to(self.device)\n",
-    "        truncated = torch.tensor(np.array(transition_dict['truncated']), \n",
-    "                                 dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        states = torch.tensor(np.array(transition_dict['states']), dtype=torch.float).to(self.device)\n",
+    "        actions = torch.tensor(np.array(transition_dict['actions']), dtype=torch.int64).view(-1, 1).to(self.device)\n",
+    "        rewards = torch.tensor(np.array(transition_dict['rewards']), dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        next_states = torch.tensor(np.array(transition_dict['next_states']), dtype=torch.float).to(self.device)\n",
+    "        dones = torch.tensor(np.array(transition_dict['dones']), dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        truncated = torch.tensor(np.array(transition_dict['truncated']), dtype=torch.int).view(-1, 1).to(self.device)\n",
     "\n",
     "        # 时序差分目标\n",
     "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
@@ -595,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
