--- a/强化学习笔记/12_PPO.ipynb
+++ b/强化学习笔记/12_PPO.ipynb
@@ -180,18 +180,12 @@
     "        return action.item()\n",
     "\n",
     "    def update(self, transition_dict):\n",
-    "        states = torch.tensor(np.array(transition_dict['states']), \n",
-    "                              dtype=torch.float).to(self.device)\n",
-    "        actions = torch.tensor(np.array(transition_dict['actions']), \n",
-    "                                   dtype=torch.int64).view(-1, 1).to(self.device)\n",
-    "        rewards = torch.tensor(np.array(transition_dict['rewards']), \n",
-    "                               dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        next_states = torch.tensor(np.array(transition_dict['next_states']), \n",
-    "                                   dtype=torch.float).to(self.device)\n",
-    "        dones = torch.tensor(np.array(transition_dict['dones']), \n",
-    "                             dtype=torch.int).view(-1, 1).to(self.device)\n",
-    "        truncated = torch.tensor(np.array(transition_dict['truncated']), \n",
-    "                                 dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        states = torch.tensor(np.array(transition_dict['states']), dtype=torch.float).to(self.device)\n",
+    "        actions = torch.tensor(np.array(transition_dict['actions']), dtype=torch.int64).view(-1, 1).to(self.device)\n",
+    "        rewards = torch.tensor(np.array(transition_dict['rewards']), dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        next_states = torch.tensor(np.array(transition_dict['next_states']), dtype=torch.float).to(self.device)\n",
+    "        dones = torch.tensor(np.array(transition_dict['dones']), dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        truncated = torch.tensor(np.array(transition_dict['truncated']), dtype=torch.int).view(-1, 1).to(self.device)\n",
     "        \n",
     "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
     "        td_delta = td_target - self.critic(states)\n",
@@ -208,7 +202,7 @@
     "            surr2 = torch.clip(ratio, 1 - self.eps, 1 + self.eps) * advantage  # 截断的重要性采样\n",
     "            # PPO损失函数，取上面两者的最小值，加负号，取均值就是损失\n",
     "            actor_loss = torch.mean(-torch.min(surr1, surr2)) \n",
-    "            # 评论员更新目标当作标签常数，加.detach()\n",
+    "            # 评论员更新目标当作标签，加.detach()不纳入计算图\n",
     "            critic_loss = torch.mean(F.mse_loss(self.critic(states), td_target.detach()))\n",
     "            \n",
     "            self.actor_optimizer.zero_grad()\n",
@@ -770,13 +764,6 @@
    "source": [
     "view_list = rl_utils.show_gym_policy(env_name, agent, 'human', epochs=10, model_type='AC', if_return=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -795,7 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
