--- a/机器学习笔记/X_02_草稿.ipynb
+++ b/机器学习笔记/X_02_草稿.ipynb
@@ -2,35 +2,112 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "背包中能装入的物品的最大总价值为: [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 160, 160, 160, 160, 160, 160, 160, 160, 160, 160, 160, 160, 160, 160, 160, 160, 160, 160, 160, 160, 160], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 60, 60, 60, 60, 60, 60, 60, 60, 60, 60, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 160, 160, 160, 160, 160, 160, 160, 160, 160, 160, 180, 180, 180, 180, 180, 180, 180, 180, 180, 180, 220]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "# 假设有两个数组\n",
-    "array1 = np.array([[1, 2, 3], [4, 5, 6]])  # 形状为 (2, 3)\n",
-    "array2 = np.array([[7, 8, 9], [10, 11, 12]])  # 形状为 (2, 3)\n",
+    "# 假设有三个数组\n",
+    "array1 = np.array([[1, 2, 3], \n",
+    "                   [4, 5, 6]])  # 形状为 (2, 3)\n",
     "\n",
-    "# 在每个样本上添加一个维度\n",
-    "array1_expanded = np.expand_dims(array1, axis=2)  # 形状变为 (2, 3, 1)\n",
-    "array2_expanded = np.expand_dims(array2, axis=2)  # 形状变为 (2, 3, 1)\n",
+    "array2 = np.array([[7,   8,  9], \n",
+    "                   [10, 11, 12]])  # 形状为 (2, 3)\n",
     "\n",
-    "# 垂直拼接两个数组\n",
-    "result = np.concatenate((array1_expanded, array2_expanded), axis=0)\n",
+    "array3 = np.array([[5,  23,  2], \n",
+    "                   [13, 11, 32]])  # 形状为 (2, 3)\n",
+    "\n",
+    "array = [array1, array2, array3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[1, 2, 3],\n",
+       "        [4, 5, 6]]),\n",
+       " array([[ 7,  8,  9],\n",
+       "        [10, 11, 12]]),\n",
+       " array([[ 5, 23,  2],\n",
+       "        [13, 11, 32]])]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1,  2,  3],\n",
+       "        [ 4,  5,  6]],\n",
+       "\n",
+       "       [[ 7,  8,  9],\n",
+       "        [10, 11, 12]],\n",
+       "\n",
+       "       [[ 5, 23,  2],\n",
+       "        [13, 11, 32]]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(len(array)):\n",
+    "    if i == 0:\n",
+    "        # 在每个样本上添加一个维度\n",
+    "        array_expanded = np.expand_dims(array[i], axis=0)  # 形状从 (2, 3) 变为 (1, 2, 3)\n",
+    "        continue\n",
+    "    # 垂直拼接两个数组\n",
+    "    array_expanded = np.vstack((array_expanded, np.expand_dims(array[i], axis=0)))\n",
     "\n",
     "# 输出结果\n",
-    "print(result.shape)  # 打印结果的形状\n",
-    "print(result)"
+    "array_expanded"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2, 3)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_expanded.shape  # 转好了"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -49,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
