--- a/强化学习笔记/19_多智能体.ipynb
+++ b/强化学习笔记/19_多智能体.ipynb
@@ -52,7 +52,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 环境"
+    "## 环境\n",
+    "\n",
+    "不建议配置，实际上MPE还在维护，但是疑似接口变化比较大，本代码无法配适运行"
    ]
   },
   {
